# ros_component

./: CMakeLists.txt  package.xml
component_example/: CMakeLists.txt  _package.xml  nodelet_plugins.xml  setup.py
component_example/include/component_example/: lib.h  lib_component.h
component_example/launch/: node.launch  nodelet.launch
component_example/scripts/: example_node.py  readme.md
component_example/src/: lib.cpp  lib_component.cpp  node.cpp  nodelet.cpp  readme.md
component_example/src/component_example/: readme.md
include/ros_component/: macros.h  ros_component.h  ros_node.h  ros_nodelet.h
src/: ros_component.cpp
